InventoryChart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1

  selector:
    matchLabels:
      app: inventory-service

  template:
    metadata:
      labels:
        app: inventory-service

    spec:
      containers:
        - name: inventory-service

          image: "mousama/inventory-service:latest"

          ports:
          - name: http
            containerPort: 8080
