InventoryChart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  type: ClusterIP

  selector:
    app: inventory-service

  ports:
    - port: 8080
      targetPort: 8080
